[package]
name = "dirty-debug"
description = "Quick and dirty debugging"
version = "0.2.1-pre"
authors = ["Diogo Sousa <diogogsousa@gmail.com>"]

edition = "2021"
rust-version = "1.59.0"

homepage = "https://github.com/orium/dirty-debug"
repository = "https://github.com/orium/dirty-debug"
documentation = "https://docs.rs/dirty-debug"
readme = "README.md"

keywords = [
    "debug",
]

categories = [
    "development-tools",
    "development-tools::debugging",
]

license = "MPL-2.0"

# What to include when packaging.
include = [
    "/src/**/*.rs",
    "/Cargo.toml",
    "/LICENSE.md",
    "/README.md",
    "/release-notes.md",
]

[badges]
codecov = { repository = "orium/dirty-debug", branch = "main", service = "github" }

[features]
fatal-warnings = []

[dependencies]
once_cell = "1.15.0"
dashmap = "5.4.0"

[dev-dependencies]
rand = "0.8.1"
indoc = "2.0.3"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
correctness = "deny"

inline-always = "allow"
match-bool = "allow"
needless-raw-string-hashes = "allow"
