[package]
name = "dirty-debug"
description = "Quick and dirty debugging"
version = "0.2.1-pre"
authors = ["Diogo Sousa <diogogsousa@gmail.com>"]

edition = "2021"
rust-version = "1.80.0"

homepage = "https://github.com/orium/dirty-debug"
repository = "https://github.com/orium/dirty-debug"
documentation = "https://docs.rs/dirty-debug"
readme = "README.md"

keywords = [
    "debug",
]

categories = [
    "development-tools",
    "development-tools::debugging",
]

license = "MPL-2.0"

# What to include when packaging.
include = [
    "/src/**/*.rs",
    "/Cargo.toml",
    "/LICENSE.md",
    "/README.md",
    "/release-notes.md",
]

[badges]
codecov = { repository = "orium/dirty-debug", branch = "main", service = "github" }

[features]
fatal-warnings = []

[dependencies]
dashmap = "6.0.1"

[dev-dependencies]
rand = "0.8.5"
indoc = "2.0.3"

[lints.clippy]
all = { level = "warn", priority = -2 }
pedantic = { level = "warn", priority = -2 }
correctness = { level = "deny", priority = -1 }

inline-always = "allow"
match-bool = "allow"
needless-raw-string-hashes = "allow"
