[package]
name = "dirty-debug"
description = "Quick and dirty debugging"
version = "1.0.1"
authors = ["Diogo Sousa <diogogsousa@gmail.com>"]

edition = "2024"
rust-version = "1.85.0"

homepage = "https://github.com/orium/dirty-debug"
repository = "https://github.com/orium/dirty-debug"
documentation = "https://docs.rs/dirty-debug"
readme = "README.md"

keywords = ["debug"]

categories = ["development-tools", "development-tools::debugging"]

license = "MIT"

# What to include when packaging.
include = ["/src/**/*.rs", "/Cargo.toml", "/LICENSE.md", "/README.md", "/release-notes.md"]

[badges]
codecov = { repository = "orium/dirty-debug", branch = "main", service = "github" }

[features]
fatal-warnings = []

[dependencies]
dashmap = "6.1.0"

[dev-dependencies]
indoc = "2.0.6"
rand = "0.9.2"

[lints.clippy]
all = { level = "warn", priority = -2 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -2 }

inline-always = "allow"
match-bool = "allow"
needless-raw-string-hashes = "allow"
